--- a/SELI-Platform/client/main.css
+++ b/SELI-Platform/client/main.css
@@ -3,98 +3,69 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif !important;
 }
 
-.main-container {
-  width: 100vw;
-  height: 100vh;
+body {
   overflow-x: hidden;
 }
 
-.main-image-container {
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url(bg.jpg);
-  opacity: 0.85;
-  animation: fadeInBg 4s;
-}
-
-.main-text-container {
-  width: 100%;
-  padding-top: 15%;
+.center-container {
+  width: auto;
   height: auto;
-  position: relative;
-  background-color: transparent;
-  left: 2.5vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 5.75em;
-  color: #19161D;
-  user-select: none;
-  animation: bounceInUp 1s;
+  z-index: 6;
 }
 
-#main-text-white{
-  font-size: 0.75em;
-  position: relative;
-  top: 3vh;
-  left: -2.5vw;
-}
-
-.main-text-icon {
-  width: 17.5vh;
-  height: 17.5vh;
-  background-image: url(mortarboard-d.svg);
+{
+  width: var(--scroll-up-size);
+  height: var(--scroll-up-size);
+  position: fixed;
+  right: var(--scroll-margin);
+  bottom: var(--scroll-margin);
+  z-index: 5000;
+  background-image: url(scroll-up.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  animation: tada 1.5s;
-  animation-fill-mode: backwards;
-  animation-delay: 0.75s;
+  border-radius: 100%;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+  transition-delay: 0.25s;
 }
 
-.main-button-container {
-  width: 100%;
-  height: 7vh;
-  background-color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-  margin-top: 2.5vh;
-  animation: zoomInDown 2s;
-  animation-fill-mode: backwards;
-  animation-delay: 0.5s;
-  opacity: 1;
+.ScrollUpButton__Container ,
+.ScrollUpButton__Toggled {
+  background-color: #FFF !important;
+  background-image: url(scroll-up.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  outline: none;
 }
 
-.main-button {
-  margin: 0 1vw !important;
+.ScrollUpButton__Container svg,
+.ScrollUpButton__Toggled svg {
+  fill: transparent !important;
 }
 
-.language-container {
-  width: auto;
-  height: auto;
-  position: absolute;
-  top: 2.5vh;
-  right: 2.5vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: slideInDown 1s;
+/* width */
+::-webkit-scrollbar {
+  width: 7.5px;
 }
 
-#language-native-simple{
-  width: 20vw;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
-.MuiTypography-h6 {
-  text-transform: uppercase;
-  text-align: center;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  transition: 0.5s;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  cursor: pointer;
 }
