--- a/SELI-Platform/client/stylesheet/units-navigation.css
+++ b/SELI-Platform/client/stylesheet/units-navigation.css
@@ -1,7 +1,7 @@
 .units-navigation-container {
   width: var(--course-navigation-width);
   position: relative;
-  padding-top: 2.5vh;
+  padding-top: 0.5vh;
   background-color: var(--navigation-color);
   z-index: 207;
 }
@@ -21,4 +21,14 @@
   font-size: var(--step-size);
   margin: 1.25vh 4px;
   animation: fadeInLeft 0.5s;
+  transition: 0.5s;
+}
+
+.unit-container:hover {
+  cursor: pointer;
+  filter: brightness(1.15);
+}
+
+.unit-container:hover p.step-title {
+  text-indent: 0.25vw;
 }
