--- a/SELI-Platform/client/stylesheet/variables.css
+++ b/SELI-Platform/client/stylesheet/variables.css
@@ -42,6 +42,7 @@
   --course-navigation-height: 25vh;
   --course-navigation-margin: 2.5vw;
   --navigation-title-size: 0.9em;
+  --main-navigation-title-size: 1.1em;
 
   /* Steps */
   --step-size: 0.85em;
