--- a/SELI-Platform/client/stylesheet/presentation.css
+++ b/SELI-Platform/client/stylesheet/presentation.css
@@ -25,8 +25,8 @@
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 1.5vh;
-  animation: zoomIn 0.5s;
+  margin-top: 1.25vh;
+  animation: zoomIn 1.25s;
   animation-fill-mode: backwards;
   animation-delay: 0.75s;
 }
@@ -37,7 +37,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2.75em;
+  font-size: 2.95em;
   user-select: none;
   text-transform: capitalize;
   color: var(--white);
@@ -52,10 +52,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 1.5vh;
-  animation: bounceInLeft 1s;
+  margin-top: 2vh;
+  animation: fadeInUp 0.5s;
   animation-fill-mode: backwards;
-  animation-delay: 0.75s;
+  animation-delay: 1s;
 }
 
 .main-button {
