Se agrega nueva coleccion de archivos para los cursos, se mejora las entradas de listas en formularios

--- a/SELI-Platform/client/stylesheet/forms.css
+++ b/SELI-Platform/client/stylesheet/forms.css
@@ -449,6 +449,7 @@
 .upload-file-button {
   position: relative !important;
   margin-top: 2.5vh !important;
+  margin-left: 0px !important; 
 }
 
 .description-input {
