--- a/SELI-Platform/client/stylesheet/file-upload.css
+++ b/SELI-Platform/client/stylesheet/file-upload.css
@@ -1,3 +1,8 @@
+.file-info-container {
+  background-color: #f5f5f5;
+  padding: 0 5vw;
+}
+
 .file-upload-input {
     display: none;
 }
@@ -8,6 +13,7 @@
   justify-content: center;
   transition: 0.5s;
   animation: fadeIn 1s;
+  margin: 0.75vh 0;
 }
 
 .upload-file-button {
@@ -26,6 +32,7 @@
 .file-crud-button {
   color: var(--primary) !important;
   margin-top: 1vh !important;
+  margin-bottom: 1vh !important;
 }
 
 .loading-file-progress-text {
@@ -90,4 +97,24 @@
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.view-file-link {
+  display: flex;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  color: var(--secondary);
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-top: 2.5vh;
+}
+
+.file-preview {
+  width: 8vw;
+  height: 8vw;
+  background-position: center;
+  background-size: 7.5vw;
+  background-repeat: no-repeat;
 }
