--- a/SELI-Platform/client/stylesheet/forms.css
+++ b/SELI-Platform/client/stylesheet/forms.css
@@ -449,7 +449,7 @@
 .upload-file-button {
   position: relative !important;
   margin-top: 2.5vh !important;
-  margin-left: 0px !important; 
+  margin-left: 0px !important;
 }
 
 .description-input {
@@ -568,4 +568,8 @@
 
 #lesson-creator {
   margin-top: 2.5vh;
+}
+
+.radio-label {
+  margin-right: 2.5vw;
 }
