--- a/SELI-Platform/client/stylesheet/variables.css
+++ b/SELI-Platform/client/stylesheet/variables.css
@@ -14,7 +14,7 @@
   --menu-font-size: 1.25em;
   --option-font-size: 0.8em;
   --sub-option-font-size: 0.7em;
-  --menu-hover: #0D0C0D;
+  --menu-hover: #17202A;
   --menu-indent: 2vw;
 
   /* Presentation */
