--- a/SELI-Platform/client/stylesheet/course-navigation.css
+++ b/SELI-Platform/client/stylesheet/course-navigation.css
@@ -20,6 +20,7 @@
 .main-navigation-panel-title {
   text-align: center;
   padding: 1vh 0;
+  margin-bottom: 2.5vh;
   font-size: var(--main-navigation-title-size);
   text-transform: uppercase;
   position: relative;
