--- a/SELI-Platform/client/stylesheet/stepper.css
+++ b/SELI-Platform/client/stylesheet/stepper.css
@@ -12,6 +12,6 @@
   position: fixed !important;
   bottom: 0 !important;
   padding: 1.25vh 5% !important;
-  background-color: #f5f5f5 !important;
+  background-color: #eeeeee !important;
   align-items: center;
 }
