--- a/SELI-Platform/client/stylesheet/content.css
+++ b/SELI-Platform/client/stylesheet/content.css
@@ -25,3 +25,67 @@
 .content-crud-button {
   font-size: 0.8em !important;
 }
+
+
+/**/
+
+.simple-content-form-container {
+  width: 40vw;
+  height: auto;
+}
+
+.content-input-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  animation: fadeIn 1s;
+}
+
+.content-input {
+  margin-top: 1vh !important;
+  margin-bottom: 2vh !important;
+}
+
+.content-form-control {
+  width: 100% !important;
+  animation: fadeIn 1s !important;
+}
+
+.content-question-label {
+  margin-left: 8px !important;
+  animation: fadeIn 0.5s !important;
+}
+
+.content-radio-group {
+  animation: fadeIn 0.5s !important;
+}
+
+
+/* Text */
+
+.text-title {
+  width: 90%;
+  height: auto;
+  padding: 2.5vh 5%;
+  font-size: 1.35em;
+  letter-spacing: 2px;
+  color: #333;
+}
+
+.text-subtitle {
+  width: 90%;
+  height: auto;
+  padding: 1.75vh 5%;
+  font-size: 1em;
+  letter-spacing: 1px;
+  color: #424242;
+}
+
+.text-section {
+  width: 90%;
+  height: auto;
+  padding: 1.5vh 5%;
+  font-size: 0.85em;
+  letter-spacing: 0.5px;
+  color: #757575;
+}
